--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
             <version>1.0.0-M2.1</version>
         </dependency>
 
+
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-api</artifactId>
@@ -48,6 +49,20 @@
             <version>1.0.0-M2.1</version>
             <type>pom</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.10.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.deeplearning4j/deeplearning4j-parallel-wrapper -->
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-parallel-wrapper</artifactId>
+            <version>1.0.0-M2.1</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
