--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <!-- https://mvnrepository.com/artifact/org.nd4j/nd4j-native-platform -->
         <dependency>
             <groupId>org.nd4j</groupId>
-            <artifactId>nd4j-native-platform</artifactId>
+            <artifactId>nd4j-cuda-11.6</artifactId>
             <version>1.0.0-M2.1</version>
         </dependency>
 
